Projet_GL/src/test/deca/codegen/valid/unprovided/ok/testBool2.deca
//Résultat attendu ok

class A{
  int b = 0;
  void testBool(){
  if(b == 0 && b == 0){
    print("ok");
    }
  }
}

{
  A a = new A();
  a.testBool();
}
