Projet_GL/src/test/deca/codegen/invalid/heap_overflow2.deca
//

class A{
    int a = 1;
    void appel(){
    		appel();
    }
}

{

    A a = new A();
    a.appel();
}
